fix mobile logo gap bag

--- a/code/css/style-flex.css
+++ b/code/css/style-flex.css
@@ -222,6 +222,7 @@ li {
         .header-main{
             flex-direction: column;
             align-items: flex-start;
+            justify-content: center;
         }
 
         .header p {
